# quizify

./: README.md  pyproject.toml
quizify/: __main__.py  answer.py  check.py  presenter.py  question.py  quiz.py
seeds/: quiz_questions.csv  score_penalty.csv
